--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link rel="icon" href="spinner-solid.svg">
 </head>
 <body>
-   <a href=""><img src="logo.jpg" alt=""></a>
+   <a href="">J</a>
 <h1>Comming Soon</h1>
 <hr>
 <h2 id="demo"></h2>
