--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <link rel="icon" href="spinner-solid.svg">
 </head>
 <body>
-   <a href="">J</a>
+     <a href=""><p class = "logo-j">J</p></a>
 <h1>Comming Soon</h1>
 <hr>
 <h2 id="demo"></h2>
