--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
      <link rel="icon" href="spinner-solid.svg">
 </head>
 <body>
-     <a href=""><p class = "logo-j">J</p></a>
+     <a href=""><p class = "logo-j">Joel Joy</p></a>
 <h1>Comming Soon</h1>
 <hr>
 <h2 id="demo"></h2>
 <script>
    // ............
-   var countDown = new Date("jan 01, 2030 00:00:00").getTime();
+   var countDown = new Date("jan 01, 2025 00:00:00").getTime();
    // ............
    var x = setInterval(function() {
       // .........
